replace base page

--- a/Flippy/AppShell.xaml
+++ b/Flippy/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="Flippy.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Flippy"
+    xmlns:local="clr-namespace:Flippy.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="Landing Page"
+        ContentTemplate="{DataTemplate local:LandingPage}"
+        Route="LandingPage" />
 
 </Shell>
