--- a/Flippy/Views/LandingPage.xaml
+++ b/Flippy/Views/LandingPage.xaml
@@ -2,11 +2,81 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Flippy.Views.LandingPage"
-             Title="LandingPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:model="clr-namespace:Flippy.Models"
+             Title="LandingPage"
+             Shell.NavBarIsVisible="False">
+    <Grid RowDefinitions="160, Auto, *">
+        <Image Source="logo_light.svg"
+               Margin="0, 48, 0, 46" x:Name="logo"/>
+        <CarouselView IndicatorView="indicatorView" 
+                      Grid.Row="1"
+                      x:Name="carousel"
+                      PositionChanged="OnPositionChanged"
+                      Loop="False">
+            <CarouselView.ItemsSource>
+                <x:Array Type="{x:Type model:Landing}">
+                    <model:Landing
+                            Header="Choose Item Online"
+                            Message="Plan your trip, choose your destination.Pick the best place for your holiday."
+                            ImageSource="shopper_cart.svg"/>
+                    <model:Landing
+                            Header="Payment Online"
+                            Message="Plan your trip, choose your destination.Pick the best place for your holiday."
+                            ImageSource="shopper_pay.svg"/>
+                    <model:Landing
+                            Header="Get Your Order"
+                            Message="Plan your trip, choose your destination.Pick the best place for your holiday."
+                            ImageSource="shopper_bag.svg"/>
+                </x:Array>
+            </CarouselView.ItemsSource>
+            <CarouselView.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <HorizontalStackLayout HeightRequest="335" Margin="0, 0, 0, 75">
+                            <Image Source="{Binding ImageSource}"
+                                   x:Name="imgCarousel"
+                                   Aspect="Fill"
+                                   VerticalOptions="EndAndExpand"
+                                />
+                        </HorizontalStackLayout>
+                        <Label Text="{Binding Header}"
+                               HorizontalOptions="Center"
+                               Style="{StaticResource DarkLabel}"
+                               FontSize="22"
+                               Margin="0, 19"/>
+                        <Label Text="{Binding Message}"
+                               Style="{StaticResource GreyLabel}"
+                               HorizontalOptions="Center" 
+                               Padding="78, 0"
+                               FontSize="14" />
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CarouselView.ItemTemplate>
+        </CarouselView>
+        <FlexLayout JustifyContent="SpaceBetween"
+                    x:Name="footer"
+                    AlignItems="Center"
+                    Margin="30, 45, 30, 0"
+                    Grid.Row="2">
+            <Button Text="SKIP"
+                    BackgroundColor="Transparent"
+                    TextColor="{StaticResource DarkGrey}"
+                    Padding="0"
+                    Clicked="OnSkipButton_Clicked"/>
+            <IndicatorView x:Name="indicatorView"
+                           IndicatorSize="10"
+                   IndicatorColor="#2737734d"
+                   SelectedIndicatorColor="{StaticResource DeepBlue}" />
+            <Button Text="NEXT"
+                    BackgroundColor="Transparent"
+                    TextColor="{StaticResource DeepBlue}"
+                    Padding="0"
+                    Clicked="OnNextButton_Clicked"/>
+        </FlexLayout>
+        <Button Text="Get Started" 
+                Style="{StaticResource LightButton}"
+                Grid.Row="2"
+                IsVisible="false"
+                x:Name="startBtn"/>
+    </Grid>
 </ContentPage>
