--- a/Flippy/Views/LandingPage.xaml
+++ b/Flippy/Views/LandingPage.xaml
@@ -77,6 +77,7 @@
                 Style="{StaticResource LightButton}"
                 Grid.Row="2"
                 IsVisible="false"
-                x:Name="startBtn"/>
+                x:Name="startBtn"
+                Clicked="OnStartBtn_Clicked"/>
     </Grid>
 </ContentPage>
