--- a/Flippy/Views/RegisterPage.xaml
+++ b/Flippy/Views/RegisterPage.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.LoginPage"
-             Title="Login">
+             x:Class="Flippy.Views.RegisterPage"
+             Title="Register">
     <VerticalStackLayout Padding="15, 30">
         <Image Source="logo_light.svg" 
                Margin="0, 0, 0, 36"/>
-        <Label Text="Welcome You!" 
+        <Label Text="Register Now!" 
                HorizontalOptions="Center"
                Style="{StaticResource DarkLabel}"
                FontSize="22"
@@ -15,30 +15,40 @@
               RowDefinitions="*, Auto"
               RowSpacing="15">
             <Label Text="Login"
-                   Style="{StaticResource BlueLabel}"
+                   Style="{StaticResource GreyLabel}"
                    HorizontalOptions="Center"
                    FontSize="16"/>
             <Label Text="Register" 
                    Grid.Column="1"
-                   Style="{StaticResource GreyLabel}"
+                   Style="{StaticResource BlueLabel}"
                    HorizontalOptions="Center"
                    FontSize="16"/>
             <BoxView HeightRequest="2"
                      BackgroundColor="{StaticResource DeepBlue}"
                      Grid.Row="1"
-                     Grid.Column="0"/>
+                     Grid.Column="1"/>
             <BoxView HeightRequest="1"
                      BackgroundColor="{StaticResource DarkBlue}"
                      Opacity="0.1"
                      Grid.Row="1"
-                     Grid.Column="1"/>
+                     Grid.Column="0"/>
         </Grid>
         <VerticalStackLayout Spacing="14"
                              Margin="0, 20, 0, 30">
             <Border StrokeShape="RoundRectangle 6">
                 <VerticalStackLayout BackgroundColor="White" 
                                      Padding="10, 10, 10, 0">
-                    <Label Text="User Name"
+                    <Label Text="Name"
+                           FontSize="10"
+                           Style="{StaticResource GreyLabel}"/>
+                    <Entry Style="{StaticResource MidEntry}"
+                           BackgroundColor="Transparent" />
+                </VerticalStackLayout>
+            </Border>
+            <Border StrokeShape="RoundRectangle 6">
+                <VerticalStackLayout BackgroundColor="White" 
+                                     Padding="10, 10, 10, 0">
+                    <Label Text="Email"
                            FontSize="10"
                            Style="{StaticResource GreyLabel}"/>
                     <Entry Style="{StaticResource MidEntry}"
@@ -51,42 +61,20 @@
                     <Label Text="Password"
                            FontSize="10"
                            Style="{StaticResource GreyLabel}"/>
-                    <Grid ColumnDefinitions="*, Auto">
-                        <Entry Style="{StaticResource MidEntry}"
+                    <Entry Style="{StaticResource MidEntry}"
                                BackgroundColor="Transparent"
-                               IsPassword="True"
-                               x:Name="passwordEntry"/>
-                        <ImageButton Source="hide.svg" 
-                                     Grid.Column="1"
-                                     Clicked="TogglePasswordButton_Clicked" 
-                                     Padding="10, 0"/>
-                    </Grid>
+                               IsPassword="True"/>
                 </VerticalStackLayout>
             </Border>
-            <Grid ColumnDefinitions="*, *">
-                <HorizontalStackLayout Spacing="8">
-                    <CheckBox Color="{StaticResource DeepBlue}"/>
-                    <Label Text="Remember Me" 
-                           Style="{StaticResource DarkLabel}"
-                           FontSize="Small"
-                           VerticalOptions="Center"/>
-                </HorizontalStackLayout>
-                <Button Text="Forgot Password?" 
-                        TextColor="{StaticResource DeepBlue}"
-                        Grid.Column="1"
-                        BackgroundColor="Transparent"
-                        Padding="0"
-                        HorizontalOptions="End"/>
-            </Grid>
-        </VerticalStackLayout>
-        <Button Text="Login" 
-                Style="{StaticResource LightButton}"/>
-        <Button Text="Don't have an  account? Sign Up!" 
+            <Button Text="Already have an  account?" 
                     TextColor="{StaticResource DeepBlue}"
                     Grid.Column="1"
                     BackgroundColor="Transparent"
-                    Padding="0, 10"
-                    HorizontalOptions="Center"
-                    Clicked="RegisterButton_Clicked"/>
+                    Padding="0"
+                    HorizontalOptions="End"
+                    Clicked="LoginButton_Clicked"/>
+        </VerticalStackLayout>
+        <Button Text="Register" 
+                Style="{StaticResource LightButton}"/>
     </VerticalStackLayout>
 </ContentPage>
