added reset password page

--- a/Flippy/Views/ForgotPasswordPage.xaml
+++ b/Flippy/Views/ForgotPasswordPage.xaml
@@ -25,6 +25,7 @@
             </Border>
         </VerticalStackLayout>
         <Button Text="Submit" 
-                Style="{StaticResource LightButton}"/>
+                Style="{StaticResource LightButton}"
+                Clicked="SubmitButton_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
