--- a/Flippy/Views/ResetPasswordPage.xaml
+++ b/Flippy/Views/ResetPasswordPage.xaml
@@ -1,56 +1,59 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.ResetPasswordPage"
-             Title="ResetPasswordPage">
-    <VerticalStackLayout Padding="15, 30">
-        <Image Source="logo_light.svg" 
-               Margin="0, 0, 0, 36"/>
-        <Label Text="Forgot Password" 
-               HorizontalOptions="Center"
-               Style="{StaticResource DarkLabel}"
-               FontSize="22"
-               Margin="0, 0, 0, 26"/>
-        <VerticalStackLayout Spacing="14"
-                             Margin="0, 20, 0, 30">
+<ContentPage
+    x:Class="Flippy.Views.ResetPasswordPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="ResetPasswordPage">
+    <VerticalStackLayout Padding="15,30">
+        <Image Margin="0,0,0,36" Source="logo_light.svg" />
+        <Label
+            Margin="0,0,0,26"
+            FontSize="22"
+            HorizontalOptions="Center"
+            Style="{StaticResource DarkLabel}"
+            Text="Forgot Password" />
+        <VerticalStackLayout Margin="0,20,0,30" Spacing="14">
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="New Password"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="New Password" />
                     <Grid ColumnDefinitions="*, Auto">
-                        <Entry Style="{StaticResource MidEntry}"
-                               BackgroundColor="Transparent"
-                               IsPassword="True"
-                               x:Name="newPasswordEntry"/>
-                        <ImageButton Source="hide.svg" 
-                                     Grid.Column="1"
-                                     Clicked="ToggleNewPasswordButton_Clicked" 
-                                     Padding="10, 0"/>
+                        <Entry
+                            x:Name="newPasswordEntry"
+                            BackgroundColor="Transparent"
+                            IsPassword="True"
+                            Style="{StaticResource MidEntry}" />
+                        <ImageButton
+                            Grid.Column="1"
+                            Padding="10,0"
+                            Clicked="ToggleNewPasswordButton_Clicked"
+                            Source="hide.svg" />
                     </Grid>
                 </VerticalStackLayout>
             </Border>
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Confirm Password"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Confirm Password" />
                     <Grid ColumnDefinitions="*, Auto">
-                        <Entry Style="{StaticResource MidEntry}"
-                               BackgroundColor="Transparent"
-                               IsPassword="True"
-                               x:Name="confirmPasswordEntry"/>
-                        <ImageButton Source="hide.svg" 
-                                     Grid.Column="1"
-                                     Clicked="ToggleConfirmPasswordButton_Clicked" 
-                                     Padding="10, 0"/>
+                        <Entry
+                            x:Name="confirmPasswordEntry"
+                            BackgroundColor="Transparent"
+                            IsPassword="True"
+                            Style="{StaticResource MidEntry}" />
+                        <ImageButton
+                            Grid.Column="1"
+                            Padding="10,0"
+                            Clicked="ToggleConfirmPasswordButton_Clicked"
+                            Source="hide.svg" />
                     </Grid>
                 </VerticalStackLayout>
             </Border>
         </VerticalStackLayout>
-        <Button Text="Reset" 
-                Style="{StaticResource LightButton}"/>
+        <Button Style="{StaticResource LightButton}" Text="Reset" />
     </VerticalStackLayout>
 </ContentPage>
