--- a/Flippy/Views/ForgotPasswordPage.xaml
+++ b/Flippy/Views/ForgotPasswordPage.xaml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.ForgotPasswordPage"
-             Title="Forgot Password">
-    <VerticalStackLayout Padding="15, 30">
-        <Image Source="logo_light.svg" 
-               Margin="0, 0, 0, 36"/>
-        <Label Text="Forgot Password" 
-               HorizontalOptions="Center"
-               Style="{StaticResource DarkLabel}"
-               FontSize="22"
-               Margin="0, 0, 0, 26"/>
-        <VerticalStackLayout Spacing="14"
-                             Margin="0, 20, 0, 30">
+<ContentPage
+    x:Class="Flippy.Views.ForgotPasswordPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="Forgot Password">
+    <VerticalStackLayout Padding="15,30">
+        <Image Margin="0,0,0,36" Source="logo_light.svg" />
+        <Label
+            Margin="0,0,0,26"
+            FontSize="22"
+            HorizontalOptions="Center"
+            Style="{StaticResource DarkLabel}"
+            Text="Forgot Password" />
+        <VerticalStackLayout Margin="0,20,0,30" Spacing="14">
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Email"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
-                    <Entry Style="{StaticResource MidEntry}"
-                           BackgroundColor="Transparent" />
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Email" />
+                    <Entry BackgroundColor="Transparent" Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
         </VerticalStackLayout>
-        <Button Text="Submit" 
-                Style="{StaticResource LightButton}"
-                Clicked="SubmitButton_Clicked"/>
+        <Button
+            Clicked="SubmitButton_Clicked"
+            Style="{StaticResource LightButton}"
+            Text="Submit" />
     </VerticalStackLayout>
 </ContentPage>
