--- a/Flippy/Views/LoginPage.xaml
+++ b/Flippy/Views/LoginPage.xaml
@@ -1,94 +1,104 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.LoginPage"
-             Title="Login">
-    <VerticalStackLayout Padding="15, 30">
-        <Image Source="logo_light.svg" 
-               Margin="0, 0, 0, 36"/>
-        <Label Text="Welcome You!" 
-               HorizontalOptions="Center"
-               Style="{StaticResource DarkLabel}"
-               FontSize="22"
-               Margin="0, 0, 0, 26"/>
-        <Grid ColumnDefinitions="*, *"
-              RowDefinitions="*, Auto"
-              RowSpacing="15">
-            <Label Text="Login"
-                   Style="{StaticResource BlueLabel}"
-                   HorizontalOptions="Center"
-                   FontSize="16"/>
-            <Label Text="Register" 
-                   Grid.Column="1"
-                   Style="{StaticResource GreyLabel}"
-                   HorizontalOptions="Center"
-                   FontSize="16"/>
-            <BoxView HeightRequest="2"
-                     BackgroundColor="{StaticResource DeepBlue}"
-                     Grid.Row="1"
-                     Grid.Column="0"/>
-            <BoxView HeightRequest="1"
-                     BackgroundColor="{StaticResource DarkBlue}"
-                     Opacity="0.1"
-                     Grid.Row="1"
-                     Grid.Column="1"/>
+<ContentPage
+    x:Class="Flippy.Views.LoginPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="Login">
+    <VerticalStackLayout Padding="15,30">
+        <Image Margin="0,0,0,36" Source="logo_light.svg" />
+        <Label
+            Margin="0,0,0,26"
+            FontSize="22"
+            HorizontalOptions="Center"
+            Style="{StaticResource DarkLabel}"
+            Text="Welcome You!" />
+        <Grid
+            ColumnDefinitions="*, *"
+            RowDefinitions="*, Auto"
+            RowSpacing="15">
+            <Label
+                FontSize="16"
+                HorizontalOptions="Center"
+                Style="{StaticResource BlueLabel}"
+                Text="Login" />
+            <Label
+                Grid.Column="1"
+                FontSize="16"
+                HorizontalOptions="Center"
+                Style="{StaticResource GreyLabel}"
+                Text="Register" />
+            <BoxView
+                Grid.Row="1"
+                Grid.Column="0"
+                BackgroundColor="{StaticResource DeepBlue}"
+                HeightRequest="2" />
+            <BoxView
+                Grid.Row="1"
+                Grid.Column="1"
+                BackgroundColor="{StaticResource DarkBlue}"
+                HeightRequest="1"
+                Opacity="0.1" />
         </Grid>
-        <VerticalStackLayout Spacing="14"
-                             Margin="0, 20, 0, 30">
+        <VerticalStackLayout Margin="0,20,0,30" Spacing="14">
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="User Name"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
-                    <Entry Style="{StaticResource MidEntry}"
-                           BackgroundColor="Transparent" />
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="User Name" />
+                    <Entry BackgroundColor="Transparent" Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Password"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Password" />
                     <Grid ColumnDefinitions="*, Auto">
-                        <Entry Style="{StaticResource MidEntry}"
-                               BackgroundColor="Transparent"
-                               IsPassword="True"
-                               x:Name="passwordEntry"/>
-                        <ImageButton Source="hide.svg" 
-                                     Grid.Column="1"
-                                     Clicked="TogglePasswordButton_Clicked" 
-                                     Padding="10, 0"/>
+                        <Entry
+                            x:Name="passwordEntry"
+                            BackgroundColor="Transparent"
+                            IsPassword="True"
+                            Style="{StaticResource MidEntry}" />
+                        <ImageButton
+                            Grid.Column="1"
+                            Padding="10,0"
+                            Clicked="TogglePasswordButton_Clicked"
+                            Source="hide.svg" />
                     </Grid>
                 </VerticalStackLayout>
             </Border>
             <Grid ColumnDefinitions="*, *">
                 <HorizontalStackLayout Spacing="8">
-                    <CheckBox Color="{StaticResource DeepBlue}"/>
-                    <Label Text="Remember Me" 
-                           Style="{StaticResource DarkLabel}"
-                           FontSize="Small"
-                           VerticalOptions="Center"/>
+                    <CheckBox Color="{StaticResource DeepBlue}" />
+                    <Label
+                        FontSize="Small"
+                        Style="{StaticResource DarkLabel}"
+                        Text="Remember Me"
+                        VerticalOptions="Center" />
                 </HorizontalStackLayout>
-                <Button Text="Forgot Password?" 
-                        TextColor="{StaticResource DeepBlue}"
-                        Grid.Column="1"
-                        BackgroundColor="Transparent"
-                        Padding="0"
-                        HorizontalOptions="End"
-                        Clicked="ForgotButton_Clicked"/>
+                <Button
+                    Grid.Column="1"
+                    Padding="0"
+                    BackgroundColor="Transparent"
+                    Clicked="ForgotButton_Clicked"
+                    HorizontalOptions="End"
+                    Text="Forgot Password?"
+                    TextColor="{StaticResource DeepBlue}" />
             </Grid>
         </VerticalStackLayout>
-        <Button Text="Login" 
-                Style="{StaticResource LightButton}"
-                Clicked="LoginButton_Clicked"/>
-        <Button Text="Don't have an  account? Sign Up!" 
-                    TextColor="{StaticResource DeepBlue}"
-                    Grid.Column="1"
-                    BackgroundColor="Transparent"
-                    Padding="0, 10"
-                    HorizontalOptions="Center"
-                    Clicked="RegisterButton_Clicked"/>
+        <Button
+            Clicked="LoginButton_Clicked"
+            Style="{StaticResource LightButton}"
+            Text="Login" />
+        <Button
+            Grid.Column="1"
+            Padding="0,10"
+            BackgroundColor="Transparent"
+            Clicked="RegisterButton_Clicked"
+            HorizontalOptions="Center"
+            Text="Don't have an  account? Sign Up!"
+            TextColor="{StaticResource DeepBlue}" />
     </VerticalStackLayout>
 </ContentPage>
