--- a/Flippy/Views/RegisterPage.xaml
+++ b/Flippy/Views/RegisterPage.xaml
@@ -1,80 +1,84 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.RegisterPage"
-             Title="Register">
-    <VerticalStackLayout Padding="15, 30">
-        <Image Source="logo_light.svg" 
-               Margin="0, 0, 0, 36"/>
-        <Label Text="Register Now!" 
-               HorizontalOptions="Center"
-               Style="{StaticResource DarkLabel}"
-               FontSize="22"
-               Margin="0, 0, 0, 26"/>
-        <Grid ColumnDefinitions="*, *"
-              RowDefinitions="*, Auto"
-              RowSpacing="15">
-            <Label Text="Login"
-                   Style="{StaticResource GreyLabel}"
-                   HorizontalOptions="Center"
-                   FontSize="16"/>
-            <Label Text="Register" 
-                   Grid.Column="1"
-                   Style="{StaticResource BlueLabel}"
-                   HorizontalOptions="Center"
-                   FontSize="16"/>
-            <BoxView HeightRequest="2"
-                     BackgroundColor="{StaticResource DeepBlue}"
-                     Grid.Row="1"
-                     Grid.Column="1"/>
-            <BoxView HeightRequest="1"
-                     BackgroundColor="{StaticResource DarkBlue}"
-                     Opacity="0.1"
-                     Grid.Row="1"
-                     Grid.Column="0"/>
+<ContentPage
+    x:Class="Flippy.Views.RegisterPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="Register">
+    <VerticalStackLayout Padding="15,30">
+        <Image Margin="0,0,0,36" Source="logo_light.svg" />
+        <Label
+            Margin="0,0,0,26"
+            FontSize="22"
+            HorizontalOptions="Center"
+            Style="{StaticResource DarkLabel}"
+            Text="Register Now!" />
+        <Grid
+            ColumnDefinitions="*, *"
+            RowDefinitions="*, Auto"
+            RowSpacing="15">
+            <Label
+                FontSize="16"
+                HorizontalOptions="Center"
+                Style="{StaticResource GreyLabel}"
+                Text="Login" />
+            <Label
+                Grid.Column="1"
+                FontSize="16"
+                HorizontalOptions="Center"
+                Style="{StaticResource BlueLabel}"
+                Text="Register" />
+            <BoxView
+                Grid.Row="1"
+                Grid.Column="1"
+                BackgroundColor="{StaticResource DeepBlue}"
+                HeightRequest="2" />
+            <BoxView
+                Grid.Row="1"
+                Grid.Column="0"
+                BackgroundColor="{StaticResource DarkBlue}"
+                HeightRequest="1"
+                Opacity="0.1" />
         </Grid>
-        <VerticalStackLayout Spacing="14"
-                             Margin="0, 20, 0, 30">
+        <VerticalStackLayout Margin="0,20,0,30" Spacing="14">
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Name"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
-                    <Entry Style="{StaticResource MidEntry}"
-                           BackgroundColor="Transparent" />
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Name" />
+                    <Entry BackgroundColor="Transparent" Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Email"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
-                    <Entry Style="{StaticResource MidEntry}"
-                           BackgroundColor="Transparent" />
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Email" />
+                    <Entry BackgroundColor="Transparent" Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
             <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout BackgroundColor="White" 
-                                     Padding="10, 10, 10, 0">
-                    <Label Text="Password"
-                           FontSize="10"
-                           Style="{StaticResource GreyLabel}"/>
-                    <Entry Style="{StaticResource MidEntry}"
-                               BackgroundColor="Transparent"
-                               IsPassword="True"/>
+                <VerticalStackLayout Padding="10,10,10,0" BackgroundColor="White">
+                    <Label
+                        FontSize="10"
+                        Style="{StaticResource GreyLabel}"
+                        Text="Password" />
+                    <Entry
+                        BackgroundColor="Transparent"
+                        IsPassword="True"
+                        Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
-            <Button Text="Already have an  account?" 
-                    TextColor="{StaticResource DeepBlue}"
-                    Grid.Column="1"
-                    BackgroundColor="Transparent"
-                    Padding="0"
-                    HorizontalOptions="End"
-                    Clicked="LoginButton_Clicked"/>
+            <Button
+                Grid.Column="1"
+                Padding="0"
+                BackgroundColor="Transparent"
+                Clicked="LoginButton_Clicked"
+                HorizontalOptions="End"
+                Text="Already have an  account?"
+                TextColor="{StaticResource DeepBlue}" />
         </VerticalStackLayout>
-        <Button Text="Register" 
-                Style="{StaticResource LightButton}"/>
+        <Button Style="{StaticResource LightButton}" Text="Register" />
     </VerticalStackLayout>
 </ContentPage>
