added product list page

--- a/Flippy/Views/HomePage.xaml
+++ b/Flippy/Views/HomePage.xaml
@@ -30,7 +30,7 @@
                     Style="{StaticResource DarkLabel}"
                     Text="All Categories" />
                 <HorizontalStackLayout Grid.Column="1">
-                    <Button Style="{StaticResource LinkButton}" Text="View All" />
+                    <Button Style="{StaticResource LinkButton}" Text="View All" Clicked="AllButton_Clicked" />
                     <Image Source="right_arrow.svg" />
                 </HorizontalStackLayout>
             </Grid>
@@ -90,7 +90,7 @@
                     Style="{StaticResource DarkLabel}"
                     Text="Best Sellers" />
                 <HorizontalStackLayout Grid.Column="1">
-                    <Button Style="{StaticResource LinkButton}" Text="View All" />
+                    <Button Style="{StaticResource LinkButton}" Text="View All" Clicked="BestSellerButton_Clicked" />
                     <Image Source="right_arrow.svg" />
                 </HorizontalStackLayout>
             </Grid>
@@ -182,7 +182,7 @@
                     Style="{StaticResource DarkLabel}"
                     Text="Fruits" />
                 <HorizontalStackLayout Grid.Column="1">
-                    <Button Style="{StaticResource LinkButton}" Text="View All" />
+                    <Button Style="{StaticResource LinkButton}" Text="View All" Clicked="FruitButton_Clicked" />
                     <Image Source="right_arrow.svg" />
                 </HorizontalStackLayout>
             </Grid>
