--- a/Flippy/Views/ForgotPasswordPage.xaml
+++ b/Flippy/Views/ForgotPasswordPage.xaml
@@ -19,7 +19,7 @@
                         FontSize="10"
                         Style="{StaticResource GreyLabel}"
                         Text="Email" />
-                    <Entry BackgroundColor="Transparent" Style="{StaticResource MidEntry}" />
+                    <Entry Style="{StaticResource MidEntry}" />
                 </VerticalStackLayout>
             </Border>
         </VerticalStackLayout>
