--- a/Flippy/Resources/Styles/Colors.xaml
+++ b/Flippy/Resources/Styles/Colors.xaml
@@ -6,6 +6,7 @@
     <Color x:Key="DeepBlue">#273773</Color>
     <Color x:Key="BgWhite">#F7F7F7</Color>
     <Color x:Key="DarkGrey">#5B5B5B</Color>
+    <Color x:Key="LightGrey">#C9C9C9</Color>
     <Color x:Key="DarkBlue">#111111</Color>
 
 </ResourceDictionary>
