--- a/Flippy/Views/ProfilePage.xaml
+++ b/Flippy/Views/ProfilePage.xaml
@@ -1,12 +1,213 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Flippy.Views.ProfilePage"
-             Title="ProfilePage">
+<ContentPage
+    x:Class="Flippy.Views.ProfilePage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Shell.BackgroundColor="White">
+
+    <Shell.TitleView>
+        <Label
+            FontSize="16"
+            HorizontalOptions="Center"
+            Style="{StaticResource DarkLabel}"
+            Text="Profile"
+            VerticalOptions="Center" />
+    </Shell.TitleView>
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <VerticalStackLayout
+            Margin="0,0,0,40"
+            Padding="0,30"
+            BackgroundColor="White">
+            <Border
+                HeightRequest="100"
+                StrokeShape="Ellipse"
+                WidthRequest="100">
+                <Image Aspect="AspectFill" Source="user_avatar.png" />
+            </Border>
+
+            <Label
+                Margin="0,5,0,7"
+                FontSize="20"
+                HorizontalOptions="Center"
+                Style="{StaticResource DarkLabel}"
+                Text="William P. Martinez" />
+            <Label
+                FontSize="12"
+                HorizontalOptions="Center"
+                Style="{StaticResource GreyLabel}"
+                Text="williamm@example.com" />
+            <Label
+                Margin="0,10,0,15"
+                FontSize="12"
+                HorizontalOptions="Center"
+                Style="{StaticResource GreyLabel}"
+                Text="+91 25401 58777" />
+            <Button
+                BackgroundColor="White"
+                Clicked="EditButton_Clicked"
+                FontFamily="LatoBold"
+                FontSize="16"
+                HorizontalOptions="Center"
+                Text="Edit Profile"
+                TextColor="{StaticResource DeepBlue}" />
+            <BoxView
+                Margin="0,-8,0,0"
+                BackgroundColor="{StaticResource DeepBlue}"
+                HeightRequest="2"
+                WidthRequest="80" />
+        </VerticalStackLayout>
+        <VerticalStackLayout Padding="15" Spacing="20">
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="{StaticResource DeepBlue}"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="heart_dark_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Wishlist"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#2CADE9"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="address_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Address"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#E50A0A"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="order_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Order"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#4CAF50"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="whatsapp_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Whatsapp Us"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#471CF9"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="blog_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Blog"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#4AD7C9"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="logout_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Logout"
+                    VerticalOptions="Center" />
+                <ImageButton
+                    Grid.Column="2"
+                    Source="right_arrow.svg"
+                    WidthRequest="8" />
+            </Grid>
+            <Grid
+                ColumnDefinitions="30, *, Auto"
+                ColumnSpacing="20"
+                HeightRequest="30">
+                <Border
+                    Padding="7"
+                    BackgroundColor="#431F1F"
+                    StrokeShape="RoundRectangle 5"
+                    WidthRequest="30">
+                    <Image Source="moon_icon.svg" />
+                </Border>
+                <Label
+                    Grid.Column="1"
+                    FontSize="16"
+                    Style="{StaticResource GreyLabel}"
+                    Text="Dark Theme"
+                    VerticalOptions="Center" />
+                <Switch Grid.Column="2" Margin="-10,5" />
+            </Grid>
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
