--- a/Flippy/Views/ProfilePage.xaml
+++ b/Flippy/Views/ProfilePage.xaml
@@ -100,7 +100,8 @@
                 <ImageButton
                     Grid.Column="2"
                     Source="right_arrow.svg"
-                    WidthRequest="8" />
+                    WidthRequest="8" 
+                    Clicked="AddressButton_Clicked"/>
             </Grid>
             <Grid
                 ColumnDefinitions="30, *, Auto"
