added order page

--- a/Flippy/Views/ProfilePage.xaml
+++ b/Flippy/Views/ProfilePage.xaml
@@ -105,12 +105,15 @@
                 <Image
                     Grid.Column="2"
                     Source="right_arrow.svg"
-                    WidthRequest="8"/>
+                    WidthRequest="8" />
             </Grid>
             <Grid
                 ColumnDefinitions="30, *, Auto"
                 ColumnSpacing="20"
                 HeightRequest="30">
+                <Grid.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OrderButton_Clicked" />
+                </Grid.GestureRecognizers>
                 <Border
                     Padding="7"
                     BackgroundColor="#E50A0A"
@@ -124,7 +127,7 @@
                     Style="{StaticResource GreyLabel}"
                     Text="Order"
                     VerticalOptions="Center" />
-                <ImageButton
+                <Image
                     Grid.Column="2"
                     Source="right_arrow.svg"
                     WidthRequest="8" />
